--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -20,6 +20,10 @@ footer span{
   cursor: pointer;
 }
 
+.fa-play::before{
+  content: "\f04b"
+}
+
 #video{
     min-width: 320px;
     margin:0 auto;
@@ -32,12 +36,39 @@ footer span{
   }
 }
 /* The Overlay (background) */
+
+body.overlayed
+{
+  overflow:hidden;
+}
+
+.video.col .icons{
+  position: absolute;
+  width: 100%;
+  height: 50px;
+  z-index: 10;
+  bottom: 0;
+}
+
+.video.col .icons .img-responsive{
+    width: 30%;
+    float: right;
+    height:inherit;
+}
+/*
+.video.col .icons .img-responsive:nth-child(1){
+  margin-left: 0;
+}
+.video.col .icons .img-responsive:nth-child(3){
+  margin-right: 0;
+}
+*/
 .overlay {
-    /* Height & width depends on how you want to reveal the overlay (see JS below) */    
+    /* Height & width depends on how you want to reveal the overlay (see JS below) */
     height: 100%;
     width: 0;
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    z-index: 100; /* Sit on top */
     left: 0;
     top: 0;
     background-color: rgb(0,0,0); /* Black fallback color */
@@ -48,7 +79,7 @@ footer span{
 
 /* Position the content inside the overlay */
 .overlay-content {
-    
+
     position: relative;
     top: 25%; /* 25% from the top */
     width: 100%; /* 100% width */
@@ -94,13 +125,14 @@ footer span{
 }
 /* Digital Stores buttons on overlay page*/
 
+
 .button {
   border-radius: 4px;
   background-color:#ff0220;
   border: none;
   color: #ffffff;
   text-align: center;
-  
+
   font-size: 28px;
   padding: 20px;
   width: 240px;
@@ -128,13 +160,13 @@ footer span{
 
 .button:hover span {
   padding-right: 25px;
-  
+
 }
 
 .button:hover span:after {
   opacity: 1;
   right: 0;
- 
+
 }
 .button:hover {
  background-color: #3e8e41;
@@ -156,4 +188,76 @@ font-size: 30px;
 .img-responsive{
   max-width: 100%;
   height: auto;
+}
+
+/* Flex */
+
+.flex {
+  display: -ms-flexbox;
+  -ms-flex-pack: justify;
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -moz-flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+
+  -moz-justify-content: flex-start;
+  -webkit-justify-content: flex-start;
+  -ms-justify-content: flex-start;
+  justify-content: flex-start;
+}
+
+@media screen and (min-width: 736px)
+{
+  .video.col
+  {
+      margin-left: 1%;
+      margin-right: 1%;
+  }
+}
+table {
+    border-collapse: collapse;
+    border: 1px solid black;
+    height:auto;
+    width: 100%;
+
+    margin-left:0cm;
+}
+.content-table {
+    border: 1px solid red;
+    padding: 15px;
+    margin-left: 20px;
+    margin-right:40px;
+}
+/* Fonts*/
+li.sansserif {
+    font-family: Arial, Helvetica, sans-serif;
+}
+row.span{
+
+  color:red;
+}
+/*DIV content description*/
+
+div.content-description{
+  font-style:inherit;
+  font-weight: inherit;
+  font-family: inherit;
+}
+/*HR*/
+hr {
+    display: block;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: inset;
+    border-width: 1px;
+}
+icons.twitter-share-button{
+  width:300px;
+  height:200px;
 }
